--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
+numpy==1.21.0
 pandas==1.2.5
+pytz==2021.1
 sphinx==4.0.1
 scipy==1.7.0
-yahoo-historical==0.3.2
-numpy==1.21.0
-pytz==2021.1
+yfinance==0.1.60
