--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,16 +30,7 @@ jobs:
             version: 19.03.13
       - run:
           name: "Image creation"
-          command: docker build --cache-from=app -t mathonweb/finance .
-      - run:
-          name: Save Docker image layer cache
-          command: |
-            mkdir -p /caches
-            docker save -o /caches/finance.tar finance
-      - save_cache:
-          key: v1-{{ .Branch }}-{{ epoch }}
-          paths:
-            - /caches/finance.tar
+          command: docker build -t mathonweb/finance .
 
   deploy:
     docker:
@@ -50,6 +41,9 @@ jobs:
     steps:
       - setup_remote_docker:
             version: 19.03.13
+      - run:
+          name: "Image creation"
+          command: docker build -t mathonweb/finance .
       - run:
           name: "Image push to DockerHub"
           command: docker push mathonweb/finance
