--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,9 +35,7 @@ jobs:
   deploy:
     docker:
       - image: cimg/base:stable
-        auth:
-          username: $DOCKERHUB_USERNAME
-          password: $DOCKERHUB_PASSWORD
+
     steps:
       - checkout
       - setup_remote_docker:
@@ -47,7 +45,9 @@ jobs:
           command: docker build -t mathonweb/finance .
       - run:
           name: "Image push to DockerHub"
-          command: docker push mathonweb/finance
+          command: |
+            docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
+            docker push mathonweb/finance
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
