--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
           name: "Test"
           command: |
             pip install -r requirements.txt
-            coverage run -m pytest finance/finance.py --junitxml=junit_result.xml
+            coverage run -m pytest --junitxml=junit_result.xml
       - store_test_results:
           path: .
 
