Fix syntax in workflows

--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -5,8 +5,8 @@ on:
 
 jobs:
 
-  pre-commit:
-    runs-on: ubuntu-latest
+  #pre-commit:
+  #  runs-on: ubuntu-latest
 
   test:
     runs-on: ubuntu-latest
