--- a/.github/workflows/release-ci.yml
+++ b/.github/workflows/release-ci.yml
@@ -5,14 +5,29 @@ on:
     types: [published]
 
 jobs:
-
   deploy:
-    # Only from a push on master
+    name: Push Docker image to Docker hub
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
-      - name: "Build the Docker image"
-        run: docker build . --file Dockerfile --tag mathonweb/finance
-      - name: "Push to DockerHub"
-        run: echo ${{ secrets.DOCKERHUB_TOKEN }}| docker login --username ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin docker push mathonweb/finance
+      - name: Check out the repo
+        uses: actions/checkout@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        with:
+          images: mathonweb/finance
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
